# fontfinder

./: Cargo.toml  Makefile
gtk/: Cargo.toml
gtk/src/: utils.rs
gtk/src/ui/: main.rs  mod.rs
gtk/src/ui/widgets/: fontlist.rs  header.rs
src/: dirs.rs
