[package]
authors = ["Michael Aaron Murphy <mmstickman@gmail.com>"]
name = "fontfinder-gtk"
description = "GTK3 Font Finding GUI Application"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/mmstick/fontfinder"
version = "1.5.0"

[dependencies]
cascade = "0.1.2"
fontfinder = { path = ".." }
glib = "0.9.3"
gio = "0.8.1"
gtk = { version = "0.8.1", features = ["v3_24_8"] }
webkit2gtk = { version = "0.9.2" }
